--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <button type="button" id="subscribe">Следить за изменениями</button>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
 <script>
   // Initialize Firebase
